--- a/about.html
+++ b/about.html
@@ -4,16 +4,17 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Whitehouse Robotics | Home</title>
+		<title>Whitehouse Robotics | About</title>
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
 			rel="stylesheet"
 			integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
 			crossorigin="anonymous"
 		/>
-		<link href="index.css" rel="stylesheet" />
+		<link href="about.css" rel="stylesheet" />
 	</head>
 	<body>
+		<img class="navbarImg" src="school.png" />
 		<nav class="navbar navbar-expand-lg navBg">
 			<div class="container-fluid">
 				<div class="navbar-brand title">Whitehouse Robotics</div>
@@ -31,12 +32,12 @@
 				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav">
 						<li class="nav-item">
-							<div class="nav-link link" aria-current="page">Home</div>
+							<a class="nav-link link" aria-current="page" href="index.html"
+								>Home</a
+							>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link link" aria-current="page" href="about.html"
-								>About</a
-							>
+							<div class="nav-link link" aria-current="page">About</div>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link link" aria-current="page" href="">Community</a>
@@ -46,7 +47,7 @@
 			</div>
 		</nav>
 
-		<div class="container text-center spacing">
+		<!-- <div class="container text-center spacing">
 			<div class="row">
 				<div class="col">
 					<div class="card">
@@ -56,7 +57,7 @@
 				</div>
 				<div class="col">Description</div>
 			</div>
-		</div>
+		</div> -->
 
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
