--- a/about.html
+++ b/about.html
@@ -14,50 +14,137 @@
 		<link href="about.css" rel="stylesheet" />
 	</head>
 	<body>
-		<img class="navbarImg" src="school.png" />
-		<nav class="navbar navbar-expand-lg navBg">
-			<div class="container-fluid">
-				<div class="navbar-brand title">Whitehouse Robotics</div>
-				<button
-					class="navbar-toggler"
-					type="button"
-					data-bs-toggle="collapse"
-					data-bs-target="#navbarNav"
-					aria-controls="navbarNav"
-					aria-expanded="false"
-					aria-label="Toggle navigation"
-				>
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarNav">
-					<ul class="navbar-nav">
-						<li class="nav-item">
-							<a class="nav-link link" aria-current="page" href="index.html"
-								>Home</a
-							>
-						</li>
-						<li class="nav-item">
-							<div class="nav-link link" aria-current="page">About</div>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link link" aria-current="page" href="">Community</a>
-						</li>
-					</ul>
+		<div class="shade">
+			<img class="navbarImg" src="school.png" />
+			<nav class="navbar navbar-expand-lg navBg">
+				<div class="container-fluid">
+					<div class="navbar-brand title">Whitehouse Robotics</div>
+					<button
+						class="navbar-toggler"
+						type="button"
+						data-bs-toggle="collapse"
+						data-bs-target="#navbarNav"
+						aria-controls="navbarNav"
+						aria-expanded="false"
+						aria-label="Toggle navigation"
+					>
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse" id="navbarNav">
+						<ul class="navbar-nav">
+							<li class="nav-item">
+								<a class="nav-link link" aria-current="page" href="index.html"
+									>Home</a
+								>
+							</li>
+							<li class="nav-item">
+								<div class="nav-link link" aria-current="page">About</div>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link link" aria-current="page" href=""
+									>Community</a
+								>
+							</li>
+							<li class="nav-item">
+								<h1 class="navTitle">About Us</h1>
+							</li>
+						</ul>
+					</div>
 				</div>
-			</div>
-		</nav>
+			</nav>
+		</div>
 
-		<!-- <div class="container text-center spacing">
+		<div class="container text-center spacing">
 			<div class="row">
 				<div class="col">
 					<div class="card">
-						<h1 class="cardTitle">Final Robot</h1>
-						<img src="placeholder.jpg" alt="Final Robot" />
+						<img src="tempPerson.png" alt="person" />
+						<h1 class="cardTitle">Person 1</h1>
 					</div>
 				</div>
-				<div class="col">Description</div>
+				<div class="col">
+					<div class="card">
+						<img src="tempPerson.png" alt="person" />
+						<h1 class="cardTitle">Person 2</h1>
+					</div>
+				</div>
+				<div class="col">
+					<div class="card">
+						<img src="tempPerson.png" alt="person" />
+						<h1 class="cardTitle">Person 3</h1>
+					</div>
+				</div>
 			</div>
-		</div> -->
+		</div>
+
+		<div class="container text-center spacing">
+			<div class="row">
+				<div class="col">
+					<div class="card">
+						<img src="tempPerson.png" alt="person" />
+						<h1 class="cardTitle">Person 4</h1>
+					</div>
+				</div>
+				<div class="col">
+					<div class="card">
+						<img src="tempPerson.png" alt="person" />
+						<h1 class="cardTitle">Person 5</h1>
+					</div>
+				</div>
+				<div class="col">
+					<div class="card">
+						<img src="tempPerson.png" alt="person" />
+						<h1 class="cardTitle">Person 6</h1>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="container text-center spacing">
+			<div class="row">
+				<div class="col">
+					<div class="card">
+						<img src="tempPerson.png" alt="person" />
+						<h1 class="cardTitle">Person 7</h1>
+					</div>
+				</div>
+				<div class="col">
+					<div class="card">
+						<img src="tempPerson.png" alt="person" />
+						<h1 class="cardTitle">Person 8</h1>
+					</div>
+				</div>
+				<div class="col">
+					<div class="card">
+						<img src="tempPerson.png" alt="person" />
+						<h1 class="cardTitle">Person 9</h1>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="container text-center spacing">
+			<div class="row">
+				<div class="col">
+					<div class="card">
+						<img src="tempPerson.png" alt="person" />
+						<h1 class="cardTitle">Person 10</h1>
+					</div>
+				</div>
+				<div class="col">
+					<div class="card">
+						<img src="tempPerson.png" alt="person" />
+						<h1 class="cardTitle">Person 11</h1>
+					</div>
+				</div>
+				<div class="col">
+					<div class="card">
+						<img src="tempPerson.png" alt="person" />
+						<h1 class="cardTitle">Person 12</h1>
+					</div>
+				</div>
+			</div>
+		</div>
 
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
