--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
 									>Community</a
 								>
 							</li>
-							<li class="nav-item">
+							<li class="nav-item navTitlePosition">
 								<h1 class="navTitle">About Us</h1>
 							</li>
 						</ul>
