--- a/community.html
+++ b/community.html
@@ -51,6 +51,8 @@
       </div>
     </nav>
 
+    <h1 class="spacing mainTitle">Service Hours</h1>
+
     <div class="container text-center card spacing">
       <div class="row">
         <div class="col">
