--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navBg sticky-top">
       <div class="container-fluid">
-        <div class="navbar-brand title">Whitehouse Robotics</div>
+        <img src="RoboticsLogo.png" alt="logo" class="logo" />
         <button
           class="navbar-toggler"
           type="button"
@@ -47,6 +47,8 @@
         </div>
       </div>
     </nav>
+
+    <h1 class="spacing mainTitle">Our Work</h1>
 
     <div class="container text-center spacing">
       <div class="row">
