--- a/community.html
+++ b/community.html
@@ -1,115 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Whitehouse Robotics | Community</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
-    <link rel="shortcut icon" href="/favicon.ico" />
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Whitehouse Robotics | Community</title>
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+			crossorigin="anonymous"
+		/>
+		<link rel="shortcut icon" href="/favicon.ico" />
 
-    <link href="index.css" rel="stylesheet" />
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navBg sticky-top">
-      <div class="container-fluid">
-        <img src="RoboticsLogo.png" alt="logo" class="logo" />
-        <!-- <div class="navbar-brand title">Whitehouse Robotics</div> -->
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link link" aria-current="page" href="index.html"
-                >Home</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link link" aria-current="page" href="about.html"
-                >About</a
-              >
-            </li>
-            <li class="nav-item">
-              <div class="nav-link link" aria-current="page">Community</div>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+		<link href="index.css" rel="stylesheet" />
+	</head>
+	<body>
+		<nav
+			class="navbar navbar-expand-lg sticky-top"
+			style="background-color: #000000"
+		>
+			<div class="container-fluid">
+				<img src="RoboticsLogo.png" alt="logo" class="logo" />
+				<!-- <div class="navbar-brand title">Whitehouse Robotics</div> -->
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-bs-toggle="collapse"
+					data-bs-target="#navbarNav"
+					aria-controls="navbarNav"
+					aria-expanded="false"
+					aria-label="Toggle navigation"
+				>
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a class="nav-link link" aria-current="page" href="index.html"
+								>Home</a
+							>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link link" aria-current="page" href="about.html"
+								>About</a
+							>
+						</li>
+						<li class="nav-item">
+							<div class="nav-link link" aria-current="page">Community</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
 
-    <h1 class="spacing mainTitle">Service Hours</h1>
+		<h1 class="spacing mainTitle">Service Hours</h1>
 
-    <div class="container text-center card spacing">
-      <div class="row">
-        <div class="col">
-          <img src="placeholder.jpg" alt="Final Robot" />
-        </div>
-        <div class="col">
-          <h1 class="spacing cardTitle cardUnderline">East Texas Food Bank</h1>
-          <hr />
-          <div class="cardDescription">
-            On DD/MM/YYYY we went to the ETFB and spent XX hours helping the
-            community by ________
-          </div>
-        </div>
-      </div>
-    </div>
+		<div class="container text-center card spacing">
+			<div class="row">
+				<div class="col">
+					<img src="placeholder.jpg" alt="Final Robot" />
+				</div>
+				<div class="col">
+					<h1 class="spacing cardTitle cardUnderline">East Texas Food Bank</h1>
+					<hr />
+					<div class="cardDescription">
+						On DD/MM/YYYY we went to the ETFB and spent XX hours helping the
+						community by ________
+					</div>
+				</div>
+			</div>
+		</div>
 
-    <div class="container text-center card extraSpacing">
-      <div class="row">
-        <div class="col">
-          <img src="placeholder.jpg" alt="Final Robot" />
-        </div>
-        <div class="col">
-          <h1 class="spacing cardTitle">Keep Whitehouse Beautiful</h1>
-          <hr />
-          <div class="cardDescription">
-            On DD/MM/YYYY we spent the day cleaning up trash along side the
-            roads to work towards a cleaner and beautiful town.
-          </div>
-        </div>
-      </div>
-    </div>
+		<div class="container text-center card extraSpacing">
+			<div class="row">
+				<div class="col">
+					<img src="placeholder.jpg" alt="Final Robot" />
+				</div>
+				<div class="col">
+					<h1 class="spacing cardTitle">Keep Whitehouse Beautiful</h1>
+					<hr />
+					<div class="cardDescription">
+						On DD/MM/YYYY we spent the day cleaning up trash along side the
+						roads to work towards a cleaner and beautiful town.
+					</div>
+				</div>
+			</div>
+		</div>
 
-    <div class="container text-center card extraSpacing">
-      <div class="row">
-        <div class="col">
-          <img src="placeholder.jpg" alt="Final Robot" />
-        </div>
-        <div class="col">
-          <h1 class="spacing cardTitle">
-            Co-op with TRANE for A/C development
-          </h1>
-          <hr />
-          <div class="cardDescription">
-            Some of our team members worked in conjunction with TRANE INDUSTRIES
-            to develop and prototype a set of adjustable legs for A/C Units in
-            snowy regions, so that snow does not cover the base of the Unit.
-          </div>
-        </div>
-      </div>
-    </div>
+		<div class="container text-center card extraSpacing">
+			<div class="row">
+				<div class="col">
+					<img src="placeholder.jpg" alt="Final Robot" />
+				</div>
+				<div class="col">
+					<h1 class="spacing cardTitle">
+						Co-op with TRANE for A/C development
+					</h1>
+					<hr />
+					<div class="cardDescription">
+						Some of our team members worked in conjunction with TRANE INDUSTRIES
+						to develop and prototype a set of adjustable legs for A/C Units in
+						snowy regions, so that snow does not cover the base of the Unit.
+					</div>
+				</div>
+			</div>
+		</div>
 
-    <div class="endpage"></div>
+		<div class="endpage"></div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+			crossorigin="anonymous"
+		></script>
+	</body>
 </html>
