--- a/index.html
+++ b/index.html
@@ -1,103 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Whitehouse Robotics | Home</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
-    <link href="index.css" rel="stylesheet" />
-  </head>
-  <body>
-    <nav
-      class="navbar navbar-expand-lg sticky-top"
-      style="background-color: #000000"
-    >
-      <div class="container-fluid">
-        <img src="RoboticsLogo.png" alt="logo" class="logo" />
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <div class="nav-link link" aria-current="page">Home</div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link link" aria-current="page" href="about.html"
-                >About</a
-              >
-            </li>
-            <li class="nav-item">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Whitehouse Robotics | Home</title>
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+			crossorigin="anonymous"
+		/>
+		<link href="index.css" rel="stylesheet" />
+	</head>
+	<body>
+		<nav
+			class="navbar navbar-expand-lg sticky-top"
+			style="background-color: #000000"
+		>
+			<div class="container-fluid">
+				<img src="RoboticsLogo.png" alt="logo" class="logo" />
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-bs-toggle="collapse"
+					data-bs-target="#navbarNav"
+					aria-controls="navbarNav"
+					aria-expanded="false"
+					aria-label="Toggle navigation"
+				>
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<div class="nav-link link" aria-current="page">Home</div>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link link" aria-current="page" href="about.html"
+								>About</a
+							>
+						</li>
+						<!-- <li class="nav-item">
               <a class="nav-link link" aria-current="page" href="community.html"
                 >Community</a
               >
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+            </li> -->
+					</ul>
+				</div>
+			</div>
+		</nav>
 
-    <h1 class="spacing mainTitle">Our Work</h1>
+		<h1 class="spacing mainTitle">Our Work</h1>
 
-    <div class="container text-center spacing">
-      <div class="row">
-        <div class="col">
-          <div class="card">
-            <h1 class="cardTitle">Final Robot</h1>
-            <img src="placeholder.jpg" alt="Final Robot" />
-          </div>
-        </div>
-        <div class="col">Description</div>
-      </div>
-    </div>
+		<div class="container text-center spacing">
+			<div class="row">
+				<div class="col">
+					<div class="card">
+						<h1 class="cardTitle">Final Robot</h1>
+						<img src="placeholder.jpg" alt="Final Robot" />
+					</div>
+				</div>
+				<div class="col">Description</div>
+			</div>
+		</div>
 
-    <h1 class="extraSpacing mainTitle">The Building Process</h1>
+		<h1 class="extraSpacing mainTitle">The Building Process</h1>
 
-    <div class="container text-center spacing">
-      <div class="row">
-        <div class="col">
-          <img
-            src="RoboticsBuild1.png"
-            alt="Final Robot"
-            class="card buildingProcess"
-          />
-        </div>
-        <div class="col">
-          <img
-            src="RobotBuild2.png"
-            alt="Final Robot"
-            class="card buildingProcess"
-          />
-        </div>
-        <div class="col">
-          <img
-            src="RobotBuild3.png"
-            alt="Final Robot"
-            class="card buildingProcess"
-          />
-        </div>
-      </div>
-    </div>
+		<div class="container text-center spacing">
+			<div class="row">
+				<div class="col">
+					<img
+						src="RoboticsBuild1.png"
+						alt="Final Robot"
+						class="card buildingProcess"
+					/>
+				</div>
+				<div class="col">
+					<img
+						src="RobotBuild2.png"
+						alt="Final Robot"
+						class="card buildingProcess"
+					/>
+				</div>
+				<div class="col">
+					<img
+						src="RobotBuild3.png"
+						alt="Final Robot"
+						class="card buildingProcess"
+					/>
+				</div>
+			</div>
+		</div>
 
-    <div class="endpage"></div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+		<div class="endpage"></div>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+			crossorigin="anonymous"
+		></script>
+	</body>
 </html>
