--- a/index.html
+++ b/index.html
@@ -93,6 +93,32 @@
 			</div>
 		</div>
 
+		<div class="container text-center spacing">
+			<div class="row">
+				<div class="col">
+					<img
+						src="cutting.jpg"
+						alt="Final Robot"
+						class="card buildingProcess"
+					/>
+				</div>
+				<div class="col">
+					<img
+						src="pvcArm.jpg"
+						alt="Final Robot"
+						class="card buildingProcess"
+					/>
+				</div>
+				<div class="col">
+					<img
+						src="designs.jpg"
+						alt="Final Robot"
+						class="card buildingProcess"
+					/>
+				</div>
+			</div>
+		</div>
+
 		<div class="endpage"></div>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
